package codigo_generado;
public class cliente {
    private String nombre;
    private String apellidos;
    private int numCliente;
    private String correoElectronico;
    private String direccion;
    public void cliente(String nombre, String apellidos, int numCliente, String correoElectronico, String direccion) {
        // TODO: Implementar el m�todo
    }
    public String getNombre() {
        // TODO: Implementar el m�todo
    }
    public String getApellidos() {
        // TODO: Implementar el m�todo
    }
    public int getNumCliente() {
        // TODO: Implementar el m�todo
    }
    public String getCorreoElectronico() {
        // TODO: Implementar el m�todo
    }
    public String getDireccion() {
        // TODO: Implementar el m�todo
    }
}
