' Generated by UML Generator
' Encoded: hPLDRzim38Rl_XKwkeizv1niHOia1GeKHO3iDkoWI4H6L9OCIUwX7_ljasJ9traFwoMGIP4l-P1sReobsZQLoCmJoffgMX4cg36trceyDHRkcP97V06opduZ1y9GCm5P5cwvkmZI0ddD22cbgauQDkJeGkNPMsWDGY1NPcYKJRLjmpO4fVKcfhG6jHV0h5OIcHhUvwY1CLHoQ2pTpoggvsFXWina2p8HBSX5oOBC1A-ys1diOz39hmQ5UFDjafjv7ZjLxsgRzVRjL7mMkKir33plYNf5KGRagrStFuliFPXogizTopz_kS1dXRmFgu6xAaFW7wii5GUdWQvnhfgJ0FAThB-kmpWIgNZmDe5EgjQADynwi0_k-Ljwlkv6qchaqmo9u816dtjLWGLzYBdob7H3qYbruaTE1Mi4rVjO_0_VXq_Nzk2RfITZDMMMnAvZaaixoi4mZVLqmTp2745ZlwDrqBjtqq8gEhskxrJzT1SNqeTjx9CNn5Z5dk9vKUQ31Tpr6aih6AJ62tWOgWpmBH2-GpabF0QxmpEw8RHy1JAGBcc7pVVVk46hYyXYV3uATOm-5sImpOf9O1-YzfXIT_q_2TsXSUzu2uWfOy7ivJDU9jBUpnUkVZgMCOPjhpXksOnz2vNzunrTu1C_HL_AiliEH9DofiGXcwvOMRvTpxqHxzXv0vAx_xM_
' URL: http://www.plantuml.com/plantuml/uml/hPLDRzim38Rl_XKwkeizv1niHOia1GeKHO3iDkoWI4H6L9OCIUwX7_ljasJ9traFwoMGIP4l-P1sReobsZQLoCmJoffgMX4cg36trceyDHRkcP97V06opduZ1y9GCm5P5cwvkmZI0ddD22cbgauQDkJeGkNPMsWDGY1NPcYKJRLjmpO4fVKcfhG6jHV0h5OIcHhUvwY1CLHoQ2pTpoggvsFXWina2p8HBSX5oOBC1A-ys1diOz39hmQ5UFDjafjv7ZjLxsgRzVRjL7mMkKir33plYNf5KGRagrStFuliFPXogizTopz_kS1dXRmFgu6xAaFW7wii5GUdWQvnhfgJ0FAThB-kmpWIgNZmDe5EgjQADynwi0_k-Ljwlkv6qchaqmo9u816dtjLWGLzYBdob7H3qYbruaTE1Mi4rVjO_0_VXq_Nzk2RfITZDMMMnAvZaaixoi4mZVLqmTp2745ZlwDrqBjtqq8gEhskxrJzT1SNqeTjx9CNn5Z5dk9vKUQ31Tpr6aih6AJ62tWOgWpmBH2-GpabF0QxmpEw8RHy1JAGBcc7pVVVk46hYyXYV3uATOm-5sImpOf9O1-YzfXIT_q_2TsXSUzu2uWfOy7ivJDU9jBUpnUkVZgMCOPjhpXksOnz2vNzunrTu1C_HL_AiliEH9DofiGXcwvOMRvTpxqHxzXv0vAx_xM_
' Generated on: 2025-11-30T17:05:30.161941200

@startuml
skinparam classAttributeIconSize 0
hide circle

class cliente {
  -nombre: String
  -apellidos: String
  -numCliente: int
  -correoElectronico: String
  -direccion: String
  --
  +cliente(nombre: String, apellidos: String, numCliente: int, correoElectronico: String, direccion: String)
  +getNombre(): String
  +getApellidos(): String
  +getNumCliente(): int
  +getCorreoElectronico(): String
  +getDireccion(): String
}

class main {
  +{static} main(args: String[]): void
}

class pedido {
  ~totalPrecio: double = 0.0
  -cliente: cliente
  -listaproductos: List<producto>
  --
  +pedido(cliente: cliente)
  +getCliente(): cliente
  +meterProducto(producto: producto): void
  +calcularElPrecioTotal(): double
}

abstract class producto {
  -nombre: String
  -descripcion: String
  -numSerie: int
  -precioInicial: double
  --
  +producto(nombre: String, descripcion: String, numSerie: int: int, precioInicial: double)
  +getNombre(): String
  +getDescripcion(): String
  +getNumSerie(): int
  +getPrecioInicial(): double
  +calcularElPrecioFinal(): double
}

class productoDigital {
  -licencia: int
  -descuento: double
  --
  +productoDigital(licencia: int, nombre: String, descripcion: String, numSerie: int: int, precioInicial: int, descuento: double)
  +getLicencia(): int
  +getdescuento(): double
  +calcularElPrecioFinal(): double
}

class productoFisico {
  -costesEnvio: double
  --
  +productoFisico(costesEnvio: double, nombre: String, descripcion: String, numSerie: int: int, precioInicial: double)
  +getCostesEnvio(): double
  +setCostesEnvio(costesEnvio: double): void
  +calcularElPrecioFinal(): double
}

pedido *-- cliente
pedido o-- producto
productoDigital --|> producto
productoFisico --|> producto
@enduml